# ripenet

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  test-e2e-standalone.mjs
backend/: .env.example  pyproject.toml  seed_data.py
backend/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/audit/: admin.py  middleware.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/audit/migrations/: 0001_initial.py
backend/apps/exports/: urls.py  views.py
backend/apps/ipam/: admin.py  filters.py  permissions.py  serializers.py  tools_urls.py  urls.py  validators.py  views.py
backend/apps/ipam/migrations/: 0001_initial.py  0002_remove_host_status_add_nas.py  0003_subnet_project_site_nullable_vlan.py  0004_subnet_site_required.py  0005_tunnel_status_to_enabled.py  0006_cross_project_tunnels.py  0007_host_ip_type_dhcppool_host_dhcp_pool.py  0008_device_type_configurable.py
backend/apps/ipam/models/: __init__.py  device_type.py  dhcp_pool.py  host.py  subnet.py  tunnel.py  vlan.py
backend/apps/ipam/tests/: test_validators.py  test_views.py
backend/apps/projects/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  (+4 more)
backend/apps/search/: urls.py  views.py
backend/apps/templates/: admin.py  models.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py
backend/requirements/: base.txt  dev.txt
(+72 files in other folders)
